[gd_scene load_steps=7 format=3 uid="uid://cruh8bbcfvyvr"]

[ext_resource type="Texture2D" uid="uid://brp4euwugc18f" path="res://assets/background.png" id="1_blg2x"]
[ext_resource type="PackedScene" uid="uid://bt33j5dwxano3" path="res://scenes/top_ui.tscn" id="2_wrbvl"]
[ext_resource type="Texture2D" uid="uid://cdunkljd6up72" path="res://assets/bottom_ui.png" id="3_jy0d4"]
[ext_resource type="Script" path="res://scripts/grid.gd" id="4_4jr62"]
[ext_resource type="Texture2D" uid="uid://b16mstal83djo" path="res://assets/pieces/Blue Piece.png" id="5_ywhf1"]

[sub_resource type="LabelSettings" id="LabelSettings_aiic3"]
font_size = 80

[node name="Game" type="Node2D"]

[node name="background" type="TextureRect" parent="."]
offset_right = 576.0
offset_bottom = 1024.0
texture = ExtResource("1_blg2x")

[node name="top_ui" parent="." instance=ExtResource("2_wrbvl")]

[node name="counter_label" parent="top_ui/MarginContainer/HBoxContainer" index="1"]
text = "0"

[node name="bottom_ui" type="TextureRect" parent="."]
offset_top = 928.0
offset_right = 576.0
offset_bottom = 1020.0
texture = ExtResource("3_jy0d4")

[node name="grid" type="Node2D" parent="." node_paths=PackedStringArray("score_label", "counter_label", "game_Over")]
script = ExtResource("4_4jr62")
width = 8
height = 10
x_start = 64
y_start = 800
offset = 64
y_offset = 2
score_label = NodePath("../top_ui/MarginContainer/HBoxContainer/score_label")
counter_label = NodePath("../top_ui/MarginContainer/HBoxContainer/counter_label")
game_Over = NodePath("../GAME_OVER")

[node name="Sprite2D" type="Sprite2D" parent="grid"]
position = Vector2(42, 974)
scale = Vector2(0.5, 0.5)
texture = ExtResource("5_ywhf1")

[node name="destroy_timer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="collapse_timer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="refill_timer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="GAME_OVER" type="Label" parent="."]
offset_left = 74.0
offset_top = 427.0
offset_right = 240.0
offset_bottom = 537.0
label_settings = SubResource("LabelSettings_aiic3")
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="timeout" from="destroy_timer" to="grid" method="_on_destroy_timer_timeout"]
[connection signal="timeout" from="collapse_timer" to="grid" method="_on_collapse_timer_timeout"]
[connection signal="timeout" from="refill_timer" to="grid" method="_on_refill_timer_timeout"]

[editable path="top_ui"]
